# flexdamage

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: agriculture_cassava_ir.yaml  agriculture_corn_ir.yaml  agriculture_rice_ir.yaml  agriculture_sorghum_ir.yaml  agriculture_soy_ir.yaml  agriculture_wheat_combined_ir.yaml  agriculture_wheat_spring_ir.yaml  agriculture_wheat_winter_ir.yaml
configs/examples/: custom_formula.yaml
dataset/agriculture/: cassava_dummy.csv
dataset/f2_examples/: countries_mortality_SSP2.csv  ir_mortality_SSP3_rcp45_low.parquet
docs/: configuration.md  faq.md  quickstart_toy.md  structure.md
flexdamage/config/: loader.py  schema.py
flexdamage/core/: f2_gen.py  global_est.py  pipeline.py  regional.py
flexdamage/data/: backends.py  preprocessing.py
flexdamage/diagnostics/: __init__.py  advanced.py  maps.py  plots.py  styles.py  visualizer.py
flexdamage/hpc/: slurm.py
flexdamage/models/: symbolic.py
flexdamage/utils/: logging.py  monitoring.py
notebooks/: map_visualization_tutorial.ipynb  tutorial_walkthrough.ipynb
notebooks/step_by_step_output/: config.yaml
notebooks/step_by_step_output/data/: mock_mortality.csv
notebooks/step_by_step_output/results/f2/: f2_projections.csv
scripts/: refactor_notebook.py  run_estimation.py  toy_example_pipeline.py  update_notebook.py
scripts/verification/: verify_constraints.py  verify_implementation.py  verify_parallel.py  verify_polars.py  verify_slurm.py
tests/: conftest.py  test_core.py  test_maps.py  test_pipeline.py
